--- a/styles/components/_login-form.scss
+++ b/styles/components/_login-form.scss
@@ -7,7 +7,8 @@
     width: 100%;
 
     &__field {
-      padding: 0.75rem 0;
+      padding: 0.5rem 0;
+      position: relative;
 
       input {
         width: 100%;
@@ -27,6 +28,26 @@
         &:focus {
           border-color: $primary-color;
         }
+      }
+    }
+
+    .alert-validate {
+      margin-bottom: 1rem;
+      &::after {
+        content: attr(data-validate);
+        position: absolute;
+        left: 0;
+        bottom: -12px;
+        pointer-events: none;
+        color: #c80000;
+        font-size: 14px;
+        opacity: 1;
+        visibility: visible;
+        transition: opacity 0.4s, visibility 0.4s;
+      }
+
+      input {
+        border-color: #c80000;
       }
     }
   }
