--- a/styles/pages/_shipment-details.scss
+++ b/styles/pages/_shipment-details.scss
@@ -8,6 +8,10 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: min-content;
+    gap: rem(16);
+  }
+
+  @include breakpoint('lg') {
     gap: rem(32);
   }
 
@@ -97,20 +101,23 @@
       width: 100%;
       height: 100%;
       background: #fcfcfc;
-      padding: rem(10) rem(15);
+      @include flex-column(center, center, 0);
+      @include breakpoint('md') {
+        padding: rem(10) rem(15);
+      }
 
-      .drop__box {
-        padding: rem(16);
-        border: 3px dotted #a3a3a3;
+      .dropzone {
+        width: 100%;
+        padding: rem(15);
+        border-radius: rem(5);
+        border: rem(3) dotted #a3a3a3;
         @include flex-column(center, center, 0);
-
-        @include breakpoint('md') {
-          margin-top: rem(44);
-        }
-
         @include breakpoint('lg') {
           padding: rem(32);
-          margin-top: rem(32);
+        }
+
+        &.dropzone--active {
+          border-color: #005af0;
         }
 
         h4 {
@@ -126,23 +133,53 @@
           margin-bottom: 20px;
         }
 
-        .select__btn {
+        button {
           border: none;
           outline: none;
           cursor: pointer;
           transition: 0.3s;
           color: #ffffff;
+          border-radius: 4px;
           padding: 10px 20px;
-          text-decoration: none;
-          background-color: #005af0;
+          font-family: inherit;
+          background: #005af0;
 
-          &:hover {
-            border: none;
+          &:hover,
+          &:focus-visible {
             color: #005af0;
-            padding: 10px 20px;
-            text-decoration: none;
-            background-color: #ffffff;
+            background: #ffffff;
             outline: 1px solid #010101;
+          }
+
+          &:disabled {
+            opacity: 0.5;
+            cursor: not-allowed;
+          }
+        }
+
+        .attachment__form {
+          width: 100%;
+
+          h4 {
+            span {
+              cursor: pointer;
+              color: #ff0000;
+              margin-left: rem(5);
+            }
+          }
+
+          input,
+          textarea {
+            width: 100%;
+            padding: 10px 15px;
+            margin: 10px 0;
+            border: none;
+            outline: none;
+            background: #e2e2e2;
+
+            &:focus {
+              outline: 2px solid #005af0;
+            }
           }
         }
       }
